--- a/recursion_challenge.ipynb
+++ b/recursion_challenge.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "2) [optional] create a recurssive function - the egg dropping problem [very hard!!] - no need to finish just start a skeleton\n",
     "\n",
-    "### Problem : Suppose that we wish to know which stories in a 36-story building are safe to drop eggs from, and which will cause the eggs to break on landing. \n",
+    "### Problem : Suppose a building has 36 floors. If we have m eggs, how can we find the minimum number of drops needed to determine from which floors it is safe to drop an egg (in other words, it won’t break)? \n",
     "\n",
     "We make a few assumptions:\n",
     "- An egg that survives a fall can be used again.\n",
